--- a/introduction/main.css
+++ b/introduction/main.css
@@ -1,8 +1,12 @@
 /* cssert intro */
 body {margin:0 auto; color:#444; width:800px;height:100%;}
 body, h1, h2 {font-family:sans-serif;font-weight:300;}
+/* h1, h2 {font-family:Quicksand, sans-serif;} */
 .pass {color:green;}
 .fail {color:red;}
+h2 {
+  margin-bottom:0;
+}
 h1:active+iframe {
   position:relative;
   top:0;
