--- a/introduction/main.css
+++ b/introduction/main.css
@@ -12,3 +12,22 @@ h1:active+iframe {
   top:0;
   left:0;
 }
+.bookmarklet {
+    text-align: center;
+    background: #39c;
+    padding: 10px;
+    width: 180px;
+    color: #fff;
+    text-shadow: 0 1px 0 rgba(0,0,0,.3);
+    background-image: -webkit-linear-gradient(-45deg, rgba(255,255,255,0), rgba(255,255,255,.1) 60%, rgba(255,255,255,0) 60%);
+    background-image: -moz-linear-gradient(-45deg, rgba(255,255,255,0), rgba(255,255,255,.1) 60%, rgba(255,255,255,0) 60%);
+    background-image: linear-gradient(-45deg, rgba(255,255,255,0), rgba(255,255,255,.1) 60%, rgba(255,255,255,0) 60%);
+    border-radius: 5px;
+    border: 1px solid #17a;
+    box-shadow: inset 0 0 0 1px rgba(255,255,255,.3);
+    font-weight: bold;
+}
+.bookmarklet a {
+  color:white;
+  font-weight:normal;
+}
