--- a/main.css
+++ b/main.css
@@ -1,12 +1,46 @@
 /* cssert intro */
-body {margin:0 auto; color:#444; width:800px;height:100%;}
-body, h1, h2 {font-family:sans-serif;font-weight:300;}
+html {padding:0;margin:0;background:url(img/bg.jpg); font-family:sans-serif;}
+body {padding:0;margin:0 auto; color:#444; height:100%;background:url(img/header-bg.jpg) repeat-x; }
+header {padding:0;margin:0 auto;height:179px;width:800px; text-align:center;}
+h1 {
+  padding:25px 0 0 0;margin:0;
+  font-family: 'AirplaneRegular', sans-serif;
+  font-size:93px;
+  color: #ababab;
+  font-weight:100;
+  letter-spacing:1px;
+}
+h1::before, h1::after {
+content: 'A';
+font-size: 37px;
+display: inline-block;
+margin-top: -229px;
+position: relative;
+top: -16px;
+}
+h2 {
+  margin:30px 0 0 0;
+  font-family: 'QuaverSansRegular', sans-serif;
+  font-size:47px;
+  color:#ababab;
+  font-weight:100;
+  text-align:center;
+}
+header h2 {
+  margin:-10px 0 0 0;
+  font-size:40px;
+}
+h3 {
+  font-weight:normal;
+  text-align:center;
+  margin-bottom:0;margin-top:2em;
+} 
+section {
+margin:0 auto;
+width:800px;}
 /* h1, h2 {font-family:Quicksand, sans-serif;} */
 .pass {color:green;}
 .fail {color:red;}
-h2 {
-  margin-bottom:0;
-}
 h1:active+iframe {
   position:relative;
   top:0;
@@ -26,6 +60,8 @@ h1:active+iframe {
     border: 1px solid #17a;
     box-shadow: inset 0 0 0 1px rgba(255,255,255,.3);
     font-weight: bold;
+      margin:0 auto;
+
 }
 .bookmarklet a {
   color:white;
