--- a/introduction/fonts/stylesheet.css
+++ b/introduction/fonts/stylesheet.css
@@ -11,3 +11,15 @@
 
 }
 
+@font-face {
+    font-family: 'QuaverSansRegular';
+    src: url('quaversans-webfont.eot');
+    src: url('quaversans-webfont.eot?#iefix') format('embedded-opentype'),
+         url('quaversans-webfont.woff') format('woff'),
+         url('quaversans-webfont.ttf') format('truetype'),
+         url('quaversans-webfont.svg#QuaverSansRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
